--- a/signal02.html
+++ b/signal02.html
@@ -154,11 +154,46 @@
                 target="_blank">Lecture 36</a></button>
         <button><a href="https://www.youtube.com/watch?v=3qcKgzEAgAw&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=42"
                 target="_blank">Lecture 37</a></button>
-        <button><a href="" target="_blank">Lecture 38</a></button>
-        <button><a href="" target="_blank">Lecture 39</a></button>
-        <button><a href="" target="_blank">Lecture 40</a></button>
-        <button><a href="" target="_blank">Lecture 41</a></button>
-        <button><a href="" target="_blank">Lecture 42</a></button>
+        <button><a href="https://www.youtube.com/watch?v=3qcKgzEAgAw&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=42" target="_blank">Lecture 38</a></button>
+        <button><a href="https://www.youtube.com/watch?v=bqvEb3oxsg8&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=43" target="_blank">Lecture 39</a></button>
+        <button><a href="https://www.youtube.com/watch?v=PCMB9LmpRrI&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=44" target="_blank">Lecture 40</a></button>
+        <button><a href="https://www.youtube.com/watch?v=WvnBx6Sag8U&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=45" target="_blank">Lecture 41</a></button>
+        <button><a href="https://www.youtube.com/watch?v=atgCq8dEHpY&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=46" target="_blank">Lecture 42</a></button>
+        <button><a href="https://www.youtube.com/watch?v=kUHXjH71-vs&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=47" target="_blank">Lecture 43</a></button>
+        <button><a href="https://www.youtube.com/watch?v=mu313mtcliI&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=48" target="_blank">Lecture 44</a></button>
+        <button><a href="https://www.youtube.com/watch?v=oW98plxvjtU&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=49" target="_blank">Lecture 45</a></button>
+        <button><a href="https://www.youtube.com/watch?v=pf26D5j-MfM&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=50" target="_blank">Lecture 46</a></button>
+        <button><a href="https://www.youtube.com/watch?v=ooPrx6NYJ6M&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=51" target="_blank">Lecture 47</a></button>
+        <button><a href="https://www.youtube.com/watch?v=Ig8QFWTYyLI&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=52" target="_blank">Lecture 48</a></button>
+        <button><a href="https://www.youtube.com/watch?v=HTfJ0D80ByY&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=53&t=374s" target="_blank">Lecture 49</a></button>
+        <button><a href="https://www.youtube.com/watch?v=177bKUuIFfI&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=54" target="_blank">Lecture 50</a></button>
+        <button><a href="https://www.youtube.com/watch?v=hH5NbCMd4j4&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=55" target="_blank">Lecture 51</a></button>
+        <button><a href="https://www.youtube.com/watch?v=rwqBrQX6-v0&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=56" target="_blank">Lecture 52</a></button>
+        <button><a href="https://www.youtube.com/watch?v=2hk7XDDCCK4&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=57" target="_blank">Lecture 53</a></button>
+        <button><a href="https://www.youtube.com/watch?v=SH5lc4hRugA&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=58" target="_blank">Lecture 54</a></button>
+        <button><a href="https://www.youtube.com/watch?v=NuqNPDvgzfw&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=59" target="_blank">Lecture 55</a></button>
+        <button><a href="https://www.youtube.com/watch?v=00kKrEVkrDA&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=60" target="_blank">Lecture 56</a></button>
+        <button><a href="https://www.youtube.com/watch?v=Ql4mDv1adrg&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=61" target="_blank">Lecture 57</a></button>
+        <button><a href="https://www.youtube.com/watch?v=NBKEDGiKveA&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=62" target="_blank">Lecture 58</a></button>
+        <button><a href="https://www.youtube.com/watch?v=kIcPal-OcNs&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=63" target="_blank">Lecture 59</a></button>
+        <button><a href="https://www.youtube.com/watch?v=KENHW9-hkMQ&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=64" target="_blank">Lecture 60</a></button>
+        <button><a href="https://www.youtube.com/watch?v=UwHWEchwE-8&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=65" target="_blank">Lecture 61</a></button>
+        <button><a href="https://www.youtube.com/watch?v=eYdS9HcqCRE&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=66" target="_blank">Lecture 62</a></button>
+        <button><a href="https://www.youtube.com/watch?v=EJLMBqaismY&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=67" target="_blank">Lecture 63</a></button>
+        <button><a href="https://www.youtube.com/watch?v=1rAFlk7CDb0&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=68" target="_blank">Lecture 64</a></button>
+        <button><a href="https://www.youtube.com/watch?v=grnChiuADUc&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=69" target="_blank">Lecture 65</a></button>
+        <button><a href="https://www.youtube.com/watch?v=OwC-xyIk-Ls&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=70" target="_blank">Lecture 66</a></button>
+        <button><a href="https://www.youtube.com/watch?v=XY4ClL12-UI&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=71" target="_blank">Lecture 67</a></button>
+        <button><a href="https://www.youtube.com/watch?v=C4F-ZJRMbrs&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=72" target="_blank">Lecture 68</a></button>
+        <button><a href="https://www.youtube.com/watch?v=rulB6w3ykSA&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=73" target="_blank">Lecture 69</a></button>
+        <button><a href="https://www.youtube.com/watch?v=A6MM1zBOGac&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=74" target="_blank">Lecture 70</a></button>
+        <button><a href="https://www.youtube.com/watch?v=ggPt1DDnNYo&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=75" target="_blank">Lecture 71</a></button>
+        <button><a href="https://www.youtube.com/watch?v=SgMxnoCT8Eo&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=76" target="_blank">Lecture 72</a></button>
+        <button><a href="https://www.youtube.com/watch?v=OBvOUn8udOg&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=77&t=107s" target="_blank">Lecture 73</a></button>
+        <button><a href="https://www.youtube.com/watch?v=2u1yth7FjqQ&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=78" target="_blank">Lecture 74</a></button>
+        <button><a href="https://www.youtube.com/watch?v=ZFxH8is3O7Y&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=79" target="_blank">Lecture 75</a></button>
+        <button><a href="https://www.youtube.com/watch?v=4Tuf3MVqiAA&list=PLs5_Rtf2P2r6jyxFcmGrQgXLAxlEx4IoM&index=80" target="_blank">Lecture 76</a></button>
+        <button><a href="" target="_blank">Lecture 77</a></button>
     </div>
 
     <!-- Footer -->
