--- a/analog_play/lec1 - Copy (79).html
+++ b/analog_play/lec1 - Copy (79).html
@@ -9,11 +9,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="style.css">
 
-<link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
-<link rel="manifest" href="/favicon_io/site.webmanifest">
-<style>
+<link rel="apple-touch-icon" sizes="180x180" href="favicon_ion/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon_ion/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon_ion/favicon-16x16.png">
+<link rel="manifest" href="favicon_ion/site.webmanifest">
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
 .fa-anchor,.fa-coffee {font-size:200px}
