--- a/control02.html
+++ b/control02.html
@@ -53,7 +53,7 @@
             <a href="network02.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Network Theory</a>
             <a href="digital02.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Digital
                 Electronics</a>
-            <a href="emft02.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Electronics
+            <a href="electronics02.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Electronics
                 Device</a>
             <a href="math02.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Eng. Mathematics</a>
             <a href="control02.html" class="active w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Control System</a>
