--- a/control02.html
+++ b/control02.html
@@ -171,10 +171,13 @@
             target="_blank">Lecture 44</a></button>
 <button><a href="https://unacademy.com/class/control-system-for-eceee-for-gate-2021-session-45/TJWU2MJ8"
             target="_blank">Lecture 45</a></button>
-<button><a href="https://unacademy.com/class/control-system-for-eceee-for-gate-2021-session-46/LHSQTDXD"
+<button><a href="https://unacademy.com/class/control-system-for-eceee-for-gate-2021-session-46-part-1/99WR15W9"
             target="_blank">Lecture 46</a></button>
-<button><a href="https://unacademy.com/class/control-system-for-eceee-for-gate-2021-session-47/28IWNZOU"
+<button><a href="https://unacademy.com/class/control-system-for-eceee-for-gate-2021-session-46/LHSQTDXD"
             target="_blank">Lecture 47</a></button>
+<button><a href="https://unacademy.com/class/control-system-for-eceee-for-gate-2021-session-47/28IWNZOU"
+            target="_blank">Lecture 48</a></button>
+
 </div>
 
     <!-- Footer -->
