--- a/communication02.html
+++ b/communication02.html
@@ -163,7 +163,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
  </div>
- <p>Powered by Piyush Dangi</p>
+ <p>Powered by Isha Rao & Piyush Dangi</p>
 </footer>
 
 <script>
