--- a/electronics02.html
+++ b/electronics02.html
@@ -261,7 +261,7 @@
             <i class="fa fa-twitter w3-hover-opacity"></i>
             <i class="fa fa-linkedin w3-hover-opacity"></i>
         </div>
-        <p>Powered by Piyush Dangi</p>
+        <p>Powered by Isha Rao & Piyush Dangi</p>
     </footer>
 
     <script>
