--- a/signal02.html
+++ b/signal02.html
@@ -207,7 +207,7 @@
             <i class="fa fa-twitter w3-hover-opacity"></i>
             <i class="fa fa-linkedin w3-hover-opacity"></i>
         </div>
-        <p>Powered by Piyush Dangi</p>
+        <p>Powered by Isha Rao & Piyush Dangi</p>
     </footer>
 
     <script>
