--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ You'll get it!”</p>
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
  </div>
- <p>Powered by Piyush Dangi</p>
+ <p>Powered by Isha Rao & Piyush Dangi</p>
 </footer>
 
 <script>
