--- a/digital02.html
+++ b/digital02.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Gate-content</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
-        <link rel="manifest" href="favicon_io/site.webmanifest">
+<head>
+    <title>Gate-content</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="style.css">
-        <style>
-            body,
-            h1,
-            h2,
-            h3,
-            h4,
-            h5,
-            h6 {
-                font-family: "Lato", sans-serif
-            }
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
 
-            .w3-bar,
-            h1,
-            button {
-                font-family: "Montserrat", sans-serif
-            }
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <style>
+        body,
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-family: "Lato", sans-serif
+        }
 
-            .fa-anchor,
-            .fa-coffee {
-                font-size: 200px
-            }
-        </style>
-        
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2687782749186771"
-     crossorigin="anonymous"></script>
-    </head>
+        .w3-bar,
+        h1,
+        button {
+            font-family: "Montserrat", sans-serif
+        }
+
+        .fa-anchor,
+        .fa-coffee {
+            font-size: 200px
+        }
+    </style>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2687782749186771"
+        crossorigin="anonymous"></script>
+</head>
 
 <body>
 
@@ -57,15 +59,21 @@
                 class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Communication System</a>
             <a href="network02.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Network
                 Theory</a>
-            <a href="digital02.html" class="active w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Digital
+            <a href="digital02.html"
+                class="active w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Digital
                 Electronics</a>
-            <a href="electronics02.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Electronics
+            <a href="electronics02.html"
+                class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Electronics
                 Device</a>
-            <a href="math02.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Eng. Mathematics</a>
-            <a href="control02.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Control System</a>
-            <a href="signal02.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Signal And
+            <a href="math02.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Eng.
+                Mathematics</a>
+            <a href="control02.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Control
                 System</a>
-            <a href="emft02.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Electromagnetic
+            <a href="signal02.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Signal
+                And
+                System</a>
+            <a href="emft02.html"
+                class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Electromagnetic
                 Field Theory</a>
         </div>
 
@@ -82,7 +90,7 @@
             <a href="emft02.html" class="w3-bar-item w3-button w3-padding-large">Electromagnetic Field Theory</a>
         </div>
     </div>
-    
+
     <div id="digital" style="background-color: white; margin-top: 74px;">
         <h1 style="padding-top: 16px; background-color:#f44336;">Digital Electronics</h1>
 
@@ -115,6 +123,118 @@
         <button><a
                 href="https://unacademy.com/plus/course/digital-electronics-for-eceee-for-gate-2021-session-10/TVM4R4YT"
                 target="_blank">Lecture 10</a></button>
+
+        <!-- blog content -->
+        <div class="w3-content" style="max-width:1400px">
+
+            <!-- Grid -->
+            <div class="w3-row">
+
+                <!-- Blog entries -->
+                <div class="w3-col l8 s12">
+                    <!-- Blog entry -->
+                    <div class="w3-card-4 w3-margin w3-white">
+                        <div class="w3-container">
+                            <h3><b>Mind Sorcerer - Alternative Magic For The Mind</b></h3>
+                            <h5>by Avik Mitra</h5>
+                        </div>
+
+                        <div class="w3-container">
+                            <p>
+                                The mind is a very powerful element of your body. It needs refreshing, rejuvenation and
+                                constant motivation to enable its owner to achieve great heights. Learn how to
+                                rejuvenate your mind with expert advice and solutions.
+                            </p>
+                        </div>
+                    </div>
+                    <hr>
+
+                    <!-- Blog entry -->
+                    <div class="w3-card-4 w3-margin w3-white">
+                        <div class="w3-container">
+                            <h3><b>How to Cope: Dealing With Anxiety</b></h3>
+                            <h5>by Tamara Monell</h5>
+                        </div>
+
+                        <div class="w3-container">
+                            <p>
+                                This article is about managing your anxiety and fears during this pandemic. Being able
+                                to seek support and allowing yourself to heal.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- END BLOG ENTRIES -->
+                </div>
+
+                <!-- Introduction menu -->
+                <div class="w3-col l4">
+                    <!-- About Card -->
+                    <div class="w3-card w3-margin w3-margin-top">
+                        <div class="w3-container w3-white">
+                            <h4><b>Developing Thoughts About an Individual</b></h4>
+                            <h5>by Prashant Sangam</h5>
+                            <p>
+                                The current world has been so restricted to communicate with any person,personal people
+                                or professional people, say boss to employee, brother to sister,parent to
+                                child.Sometimes I think is it because of the new changes happening in every century
+                                about new things or new technology or is this ones ego which comes out.WHY,WHY,WHY,
+                                Sometimes I ask this question to myself.
+                            </p>
+                        </div>
+                    </div>
+                    <hr>
+
+                    <!-- Posts -->
+                    <div class="w3-card w3-margin">
+                        <div class="w3-container w3-padding">
+                            <h4>Popular Posts</h4>
+                        </div>
+                        <ul class="w3-ul w3-hoverable w3-white">
+                            <li class="w3-padding-16">
+
+                                <span class="w3-large">What Music Does to Your Brain</span><br>
+                                <h6>by Gayatri Jhaveri</h6>
+                                <span>
+                                    In a lot of ways Music plays an important role in our life. It also affects the
+                                    mental health of an individual.</span>
+                            </li>
+                            <li class="w3-padding-16">
+
+                                <span class="w3-large">How You Make - Up Your MIND, Matters!</span><br>
+                                <h6>by Richard Brody</h6>
+                                <span>
+                                    It's a matter of mind, over matter. If, you don't have a mind, it doesn't matter!
+                                    Several individuals, have been credited, with, this statement, and, it has, usually,
+                                    been used, in a comedic way!</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <hr>
+
+                    <!-- Labels / tags -->
+                    <div class="w3-card w3-margin">
+                        <div class="w3-container w3-padding">
+                            <h4>Justice to 'decision Making'</h4>
+                            <h6>by Deepak Dixit</h6>
+                        </div>
+                        <div class="w3-container w3-white">
+                            <p>
+                                There is a busy & congested road in front of my house. I use this road sometimes driving
+                                my car & sometimes walking on foot. Whenever I am driving my car & in a hurry (which is
+                                the case mostly), I think," why so many people are walking on this road?
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- END Introduction Menu -->
+                </div>
+
+                <!-- END GRID -->
+            </div><br>
+
+            <!-- END w3-content -->
+        </div>
+
         <button><a
                 href="https://unacademy.com/plus/course/digital-electronics-for-eceee-for-gate-2021-session-11/VGDFIJIY"
                 target="_blank">Lecture 11</a></button>
@@ -205,6 +325,117 @@
                 target="_blank">Lecture 49</a></button>
         <button><a href="https://unacademy.com/class/digital-electronics-for-eceee-for-gate-2021-session-50/DLL3VSVL"
                 target="_blank">Lecture 50</a></button>
+
+        <!-- blog content -->
+        <div class="w3-content" style="max-width:1400px">
+
+            <!-- Grid -->
+            <div class="w3-row">
+
+                <!-- Blog entries -->
+                <div class="w3-col l8 s12">
+                    <!-- Blog entry -->
+                    <div class="w3-card-4 w3-margin w3-white">
+                        <div class="w3-container">
+                            <h3><b>Mind Sorcerer - Alternative Magic For The Mind</b></h3>
+                            <h5>by Avik Mitra</h5>
+                        </div>
+
+                        <div class="w3-container">
+                            <p>
+                                The mind is a very powerful element of your body. It needs refreshing, rejuvenation and
+                                constant motivation to enable its owner to achieve great heights. Learn how to
+                                rejuvenate your mind with expert advice and solutions.
+                            </p>
+                        </div>
+                    </div>
+                    <hr>
+
+                    <!-- Blog entry -->
+                    <div class="w3-card-4 w3-margin w3-white">
+                        <div class="w3-container">
+                            <h3><b>How to Cope: Dealing With Anxiety</b></h3>
+                            <h5>by Tamara Monell</h5>
+                        </div>
+
+                        <div class="w3-container">
+                            <p>
+                                This article is about managing your anxiety and fears during this pandemic. Being able
+                                to seek support and allowing yourself to heal.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- END BLOG ENTRIES -->
+                </div>
+
+                <!-- Introduction menu -->
+                <div class="w3-col l4">
+                    <!-- About Card -->
+                    <div class="w3-card w3-margin w3-margin-top">
+                        <div class="w3-container w3-white">
+                            <h4><b>Developing Thoughts About an Individual</b></h4>
+                            <h5>by Prashant Sangam</h5>
+                            <p>
+                                The current world has been so restricted to communicate with any person,personal people
+                                or professional people, say boss to employee, brother to sister,parent to
+                                child.Sometimes I think is it because of the new changes happening in every century
+                                about new things or new technology or is this ones ego which comes out.WHY,WHY,WHY,
+                                Sometimes I ask this question to myself.
+                            </p>
+                        </div>
+                    </div>
+                    <hr>
+
+                    <!-- Posts -->
+                    <div class="w3-card w3-margin">
+                        <div class="w3-container w3-padding">
+                            <h4>Popular Posts</h4>
+                        </div>
+                        <ul class="w3-ul w3-hoverable w3-white">
+                            <li class="w3-padding-16">
+
+                                <span class="w3-large">What Music Does to Your Brain</span><br>
+                                <h6>by Gayatri Jhaveri</h6>
+                                <span>
+                                    In a lot of ways Music plays an important role in our life. It also affects the
+                                    mental health of an individual.</span>
+                            </li>
+                            <li class="w3-padding-16">
+
+                                <span class="w3-large">How You Make - Up Your MIND, Matters!</span><br>
+                                <h6>by Richard Brody</h6>
+                                <span>
+                                    It's a matter of mind, over matter. If, you don't have a mind, it doesn't matter!
+                                    Several individuals, have been credited, with, this statement, and, it has, usually,
+                                    been used, in a comedic way!</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <hr>
+
+                    <!-- Labels / tags -->
+                    <div class="w3-card w3-margin">
+                        <div class="w3-container w3-padding">
+                            <h4>Justice to 'decision Making'</h4>
+                            <h6>by Deepak Dixit</h6>
+                        </div>
+                        <div class="w3-container w3-white">
+                            <p>
+                                There is a busy & congested road in front of my house. I use this road sometimes driving
+                                my car & sometimes walking on foot. Whenever I am driving my car & in a hurry (which is
+                                the case mostly), I think," why so many people are walking on this road?
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- END Introduction Menu -->
+                </div>
+
+                <!-- END GRID -->
+            </div><br>
+
+            <!-- END w3-content -->
+        </div>
         <button><a href="https://unacademy.com/class/digital-electronics-for-eceee-for-gate-2021-session-51/2XQ9ANVM"
                 target="_blank">Lecture 51</a></button>
         <button><a href="https://unacademy.com/class/digital-electronics-for-eceee-for-gate-2021-session-52/2EGNYHZ7"
